Fix masthead alignment and navigation styling

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -45,24 +45,7 @@
 }
 
 .masthead__menu {
-  display: flex;
-  align-items: center;
   width: 100%;
-
-  .masthead__site-title {
-    flex: 0 1 auto;
-    min-width: 0;
-    margin-right: 2em;
-    padding: 0.5rem 0;
-    color: var(--global-masthead-link-color);
-    font-weight: 700;
-    line-height: 1.2;
-  }
-
-  .greedy-nav {
-    flex: 1 1 auto;
-    min-width: 0;
-  }
 
   ul {
     margin: 0;
@@ -78,4 +61,11 @@
   list-style-type: none;
   white-space: nowrap;
 
+  &--lg {
+    flex: 0 1 auto;
+    margin-right: auto;
+    padding-right: 2em;
+    font-weight: 700;
+    white-space: normal;
+  }
 }
